--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -16,7 +16,7 @@
 		{% endif %}
 		
 		{% if msgCIs %}
-		<h2 style="color:black;background-color:#ffe6e6" class="text-muted"><b>REPORT:</b></h2>
+		<h2 style="color:black;background-color:#cccccc" class="text-muted"><b>REPORT:</b></h2>
 
 		<h2 style="color:black;" class="text-muted">Below screened file with data to upload and detailed issues (...report.xlsx):</h2>
 			<ul>
