--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
 -->
 <div class="wrapper fadeInDown">
   <div id="formContent">     
-    <form method="post">Please Enter your credentials:
+    <form method="post">Please enter your credentials:
       <label style="background-color:white"></label>
       <input type="text" id="username" name="username" placeholder="username">
       <label style="background-color:white"></label>
