--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -6,6 +6,7 @@
 <p class="big"></p>
 	<div class="multi_upload_index">
 
+
 		{% if msg17 %}
 			<h2 style="color:red;background-color:#ffe6e6" class="text-muted">{{ msg17 }}</h2>
 		
@@ -16,27 +17,39 @@
 		{% endif %}
 		
 		{% if msgCIs %}
-		<h2 style="color:black;background-color:#cccccc" class="text-muted"><b>REPORT:</b></h2>
-
-		<h2 style="color:black;" class="text-muted">Below screened file with data to upload and detailed issues (...report.xlsx):</h2>
+		{% if msg_company %}
+			<h2 style="color:black;background-color:#cccccc" class="text-muted"><b>{{ msg_company }} REPORT:</b></h2>
+		{% endif %}
+		<h2 style="color:black;" class="text-muted">Below the screened file with data to upload and detailed issues (...report_"date".xlsx):</h2>
 			<ul>
 				{% for file in filenames %}
 					<li><a href="{{url_for('uploaded_file', filename=file)}}">{{file}}</a></li>
 				{% endfor %}
 			</ul>
 		<hr/>
+
+		{% if msg_cmdb1 %}
+			<h2 style="color:green;background-color:#ccffcc" class="text-muted">{{ msg_cmdb1 }}</h2>
+		{% endif %}
+		{% if msg_cmdb2 %}
+			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg_cmdb2 }}</h2>
+		{% endif %}
+			<h2 style="color:green">
+				<pre>
+					{{ text_cmdb }}
+				</pre>
+			</h2>
 			<u><h2 style="color:black;background-color:#cccccc" class="text-muted">{{ msgCIs }}</h2></u>
 		{% endif %}
 
 		{% if msg15 %}
-			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg15 }}</h2>
+			<h2 style="color:#0059b3;background-color:#e6f2ff" class="text-muted">{{ msg15 }}</h2>
 		{% endif %}
-		{% if msg16 %}
-			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg16 }}</h2>
-		{% endif %}
+		<h2 style="color:#0059b3;">
 			<pre>
 				{{ text_summary_Cis }}
 			</pre>
+		</h2>
 		{% if msg %}
 			<h2 style="color:red;background-color:#ffe6e6" class="text-muted">{{ msg }}</h2>
 		{% endif %}
@@ -46,14 +59,14 @@
 		{% if msg3 %}
 			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg3 }}</h2>
 		{% endif %}
-			
+			<h2 style="color:#b30000">
 				<pre>
 					{{ text_errors_Cis }}
 				</pre>
-
+			</h2>
 
 		{% if msg7 %}
-			<h2 style="color:orange;background-color:#ffe6cc" class="text-muted">{{ msg7 }}</h2>
+			<h2 style="color:#e65c00;background-color:#ffe6cc" class="text-muted">{{ msg7 }}</h2>
 		{% endif %}
 		{% if msg8 %}
 			<h2 style="color:green;background-color:#ccffcc" class="text-muted">{{ msg8 }}</h2>
@@ -61,24 +74,23 @@
 		{% if msg9 %}
 			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg9 }}</h2>
 		{% endif %}
+		<h2 style="color:#e65c00">
 			<pre>
 				{{ text_warnings_Cis }}
 			</pre>
-
-
+		</h2>
 		{% if msgSites %}
 		<hr/>
 			<u><h2 style="color:black;background-color:#cccccc" class="text-muted">{{ msgSites }}</h2></u>
 		{% endif %}
 		{% if msg13 %}
-			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg13 }}</h2>
+			<h2 style="color:#0059b3;background-color:#e6f2ff" class="text-muted">{{ msg13 }}</h2>
 		{% endif %}
-		{% if msg14 %}
-			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg14 }}</h2>
-		{% endif %}
+		<h2 style="color:#0059b3">
 			<pre>
 				{{ text_summary_Sites }}
 			</pre>
+		</h2>
 		{% if msg4 %}
 			<h2 style="color:red;background-color:#ffe6e6" class="text-muted">{{ msg4 }}</h2>
 		{% endif %}
@@ -88,12 +100,13 @@
 		{% if msg6 %}
 			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg6 }}</h2>
 		{% endif %}
+		<h2 style="color:#b30000">
 			<pre>
 				{{ text_errors_Sites }}
 			</pre>
-
+		</h2>
 		{% if msg10 %}
-			<h2 style="color:orange;background-color:#ffe6cc" class="text-muted">{{ msg10 }}</h2>
+			<h2 style="color:#e65c00;background-color:#ffe6cc" class="text-muted">{{ msg10 }}</h2>
 		{% endif %}
 		{% if msg11 %}
 			<h2 style="color:green;background-color:#ccffcc" class="text-muted">{{ msg11 }}</h2>
@@ -101,9 +114,11 @@
 		{% if msg12 %}
 			<h2 style="color:blue;background-color:#e6f2ff" class="text-muted">{{ msg12 }}</h2>
 		{% endif %}
+		<h2 style="color:#e65c00">
 			<pre>
 				{{ text_warnings_Sites }}
 			</pre>
+		</h2>
 
 
 		
