--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,5 @@
 {% extends "login_layout.html" %}
 {% block content %}
-
 <h1>
 Hello, <b>{{ current_user.username}}</b>
 </h1>
@@ -10,31 +9,25 @@ Hello, <b>{{ current_user.username}}</b>
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-
-<h2>COMPANY:</h2>-->
-  <font size="2"><h2>Type and submit the related company in the box bellow and then select the desired action, CMDB Validation or NOAM templates conversion.</h2></font>
-
-  <form class="button" action="/home" method="POST">
-  {% if msg %}
-    <font size="2"><p><strong></strong> {{ msg }}</font>
-  {% endif %}
-    <input name="company">
-    <input class= "mybutton" type="submit" value= "Submit">
-  </form>
-  <form class="button" action="/files" method="POST">
-    <button class="mybutton" type="submit">CMDB Validation</button>
-  </form>
-  
-  <!--<form class="button" action="/cmdb" method="POST">
-    <button class="mybutton" type="submit">CMDB Validation</button>
-  </form>
-  -->
-   <form class="button" action="/noam_data" method="GET">
-      <button class="mybutton" name="forwardBtn" type="submit">NOAM templates converter</button>
-  </form>
-
-    
-  <div class="multi_upload_index">
+-->
+ <font size="2"><h2> Type and submit the related company in the box bellow.</h2></font>
+ <h2> 
+<form class="form-inline" method="POST" action="{{ url_for('home') }}">
+  <div class="form-group">
+    <div class="input-group">
+        
+            <select name="comp_select" style="color:black;background-color:#e6e6e6" class="mybutton2">
+              {% for o in data %}
+              <option value="{{ o }}">{{ o }}</option>
+              {% endfor %}
+            </select>
+             <button type="submit" class= "mybutton">SUBMIT</button>
+    </div>
+   
+  </div>
+</form>
+</h2>
+ <div class="multi_upload_index">
   <h2>Instructions for the upload templates -  <b>CI's</b> and/or <b>Sites</b>:</h2>
       <a href = "/return-file/" target ="blank"><button class="mybutton2">Download Templates</button></a>
   <hr/>
