--- a/templates/index_eia.html
+++ b/templates/index_eia.html
@@ -12,19 +12,16 @@
       {% if msg %}
         <p><strong></strong> {{ msg }}
       {% endif %}
-    <input class="mybutton" type="submit" value="Submit"  class="span2"></td>
+    <input class="mybutton" type="submit" value="SUBMIT"  class="span2"></td>
     </tr>
     </table>
   </form>
-
-
-  <h2>CONVERT OP AND RES CATS TO NOAM TEMPLATES:</h2>
+<h2></h2>
   
-
   <form class="button" align="right" method="GET" action="eia_upload" enctype="multipart/form-data">
     <table>
     <tr>
-    <input class="mybutton" type="submit" value="Submit"  class="span2"></td>
+    <input class="mybutton" type="submit" value="RUN CONVERSION:"  class="span2"></td>
     </tr>
     </table>   
   </form>
