--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,17 @@
-{% extends "login_layout.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>  
+     <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
+  </head>
+  <body>
+    <header>
+        <h1 class="logo">Nokia</h1>
+    </header>
+    <div class="container">
+    <h2 class=title align="center"><b>DATA VALIDATION FOR ONE ITSM CONFIGURATION</b></h2>
 
 <!-- <div class="wrapper fadeInDown">
   <div id="formContent">
@@ -14,17 +26,25 @@
   </div>
 </div>
 -->
+ <p>&nbsp;</p>
+<p>&nbsp;</p>
+ <p>&nbsp;</p>
+
+
 <div class="wrapper fadeInDown">
   <div id="formContent">     
-    <form method="post">Please enter your credentials:
-      <label style="background-color:white"></label>
-      <input type="text" id="username" name="username" placeholder="username">
-      <label style="background-color:white"></label>
-      <input type="password" id="password" name="password"placeholder="Password">
+    <form method="post" align ="center"><h2>Please enter your credentials:</h2>
+       <p>&nbsp;</p>
+      <input style="color:black;background-color:#e6e6e6" class="mybutton2" type="text" id="username" name="username" placeholder="username">
+      <h2></h2>
+      <input style="color:black;background-color:#e6e6e6" class="mybutton2" type="password" id="password" name="password"placeholder="Password">
+      <h2></h2>
       <input class="mybutton" type="submit" value="Login">
   </form>
   </div>
 </div>
+    </body>
+
 
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
@@ -45,5 +65,14 @@
       <img src='/static/images/NOKIA-Logo-Blue.jpg' style="width: auto; height: auto;max-width: 300px;max-height: 300px">
     </center>
   </div>
+</div>
+<div class="footer">
+      <div class="footer_contents">
+        <div align="left"> Contact: <a href="mailto:nuno_david.martins.ext@nokia.com" style="color:#ffffff;">Martins, Nuno David (EXT - PT/Amadora)</a></div>
+        <strong>Nokia internal use</strong>
 
-{% endblock %}
+      </div>
+</div>
+
+
+</html>
