--- a/templates/login.html
+++ b/templates/login.html
@@ -9,11 +9,17 @@
   <body>
     <header>
         <h1 class="logo">Nokia</h1>
+
     </header>
     <div class="container">
-    <h2 class=title align="center"><b>DATA VALIDATION FOR ONE ITSM CONFIGURATION</b></h2>
+      
+        <center>
+          <img src='/static/images/login_title.jpg' style="width: auto; height: auto;max-width: 1000px;max-height: 1000px">
+        </center>
+  
 
-<!-- <div class="wrapper fadeInDown">
+<!--
+ <div class="wrapper fadeInDown">
   <div id="formContent">
 
     Login Form
@@ -26,20 +32,21 @@
   </div>
 </div>
 -->
- <p>&nbsp;</p>
 <p>&nbsp;</p>
- <p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
 
 
 <div class="wrapper fadeInDown">
   <div id="formContent">     
-    <form method="post" align ="center"><h2>Please enter your credentials:</h2>
+    <form method="post" align ="center"><h2>PLEASE ENTER YOUR CREDENTIALS:</h2>
        <p>&nbsp;</p>
       <input style="color:black;background-color:#e6e6e6" class="mybutton2" type="text" id="username" name="username" placeholder="username">
       <h2></h2>
       <input style="color:black;background-color:#e6e6e6" class="mybutton2" type="password" id="password" name="password"placeholder="Password">
       <h2></h2>
-      <input class="mybutton" type="submit" value="Login">
+      <input class="mybutton" type="submit" value=" LOGIN ">
   </form>
   </div>
 </div>
@@ -62,7 +69,7 @@
  <div class="image_dim">
       <!-- image -->
     <center>
-      <img src='/static/images/NOKIA-Logo-Blue.jpg' style="width: auto; height: auto;max-width: 300px;max-height: 300px">
+      <img src='/static/images/Nokia-logo.jpg' style="width: auto; height: auto;max-width: 400px;max-height: 400px">
     </center>
   </div>
 </div>
