--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -1,5 +1,6 @@
 {% extends "login_layout.html" %}
 {% block content %}
+<p>&nbsp;</p>
  <!-- Login Form 
 
   <h2>Upload existing Sites in CMDB:</h2>
@@ -24,13 +25,13 @@
 <table>
   <tr>
     <form class="button" align="right" method="post" action="data" enctype="multipart/form-data">
-      <td><label id="#bb"> Select Files
+      <td><label id="#bb"> SELECT FILES
         <input type="file" multiple="" name="file[]" class="span3" /></td>
       <td> 
         {% if msg3 %}
           <p><strong></strong> {{ msg3 }}
         {% endif %}
-      <input class="mybutton" type="submit" value="Submit"  class="span2"></td>
+      <input class="mybutton" type="submit" value="SUBMIT"  class="span2"></td>
     </form>
   </tr>
 </table>
@@ -39,7 +40,7 @@
 <table>
   <tr>
     <form class="button" align="right" method="post" action="upload" enctype="multipart/form-data">
-      <input class="mybutton" id="btnload" type="submit" value="RUN Validation"  class="span2"></td>
+      <input class="mybutton" id="btnload" type="submit" value="RUN VALIDATION"  class="span2"></td>
     </form>
   </tr>
 </table>
@@ -50,7 +51,8 @@
     <font size="2"><p><strong></strong> {{ msg }}</font>
   {% endif %}  
 
-  
+ <p>&nbsp;</p>
+ 
 <div class="multi_upload_index">
   <h2>INPUT FILES RULES:</h2>
   <hr/>
