--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
   </head>
-  <body>
+  <body style='text-align:center'>
     <header>
         <h1 class="logo">Nokia</h1>
 
