--- a/templates/cmdb_validation_admin.html
+++ b/templates/cmdb_validation_admin.html
@@ -2,7 +2,7 @@
 {% block content %}
 <p>&nbsp;</p>
 <h2>Please select the desired action:</h2>
-
+<p>&nbsp;</p>
 <table>
     <tr>
       <form class="button" align="right" method="post" action="/data" enctype="multipart/form-data">
@@ -19,7 +19,7 @@
     <tr>
     <form class="button" method="post" action=/noam_data enctype="multipart/form-data">
       <input class="mybutton" type="submit" value="TEMPLATES CONVERSION"  class="span2"></td>    
-      Select this option to convert CIs and Sites in NOAM templates
+      Select this option to convert CIs and Sites in NOAM templates.
     </form>
       </form>
  </tr>
@@ -29,13 +29,46 @@
 
 <table>
     <tr>
-    <form class="button" align="right" method="post" action=/rap enctype="multipart/form-data">
+    <form class="button" align="right" method="get" action="rap" enctype="multipart/form-data">
       <input class="mybutton" type="submit" value="RA (RAP TOOL) TEMPLATE"  class="span2"></td>
       Select this option to validate RA template for RAP Tool (To implement).
     </form>
   </tr>
     </table>   
 
+ <h2></h2>
 
+<!--<table>
+    <tr>
+    <form class="button" align="right" method="post" action=/site_data enctype="multipart/form-data">
+      <input class="mybutton" type="submit" value="    CMDB DATA REPORT     "  class="span2"></td> 
+      Select this option to download a CMDB report (workaround).
+    </form>
+ </tr>
+    </table>
+-->
+
+
+
+<table>
+  <tr> 
+    <form class="button" method="get" action="chg_mod" enctype="multipart/form-data">
+        <input class="mybutton" type="SUBMIT" value="      CHANGE MODULE       "  class="span2"></td>
+         Select this option to validate the Change Module.
+    </form>
+  </tr>
+</table>
+ <h2></h2>
+
+
+<table>
+  <tr> 
+    <form class="button" method="get" action="site_upload" enctype="multipart/form-data">
+        <input class="mybutton" type="SUBMIT" value="    CMDB DATA REPORT     "  class="span2"></td>
+         Select this option to download a CMDB report (workaround).
+    </form>
+  </tr>
+</table>
+ <h2></h2>
 
 {% endblock %}
