--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -15,7 +15,7 @@
           </ul>
           <div align="right">
             <form action="/logout" method="GET">
-              <button class="mybutton" type="submit">LOGOUT</button>
+              <button class="mybutton" type="submit"><font size="2">LOGOUT</font></button>
             </form>
           </div>
         </nav></strong>
