--- a/static/css/main.css
+++ b/static/css/main.css
@@ -180,14 +180,20 @@ h3 {
 }
 
 .button {
-  color: #000000;
-  border: none;
-  border-radius: 1px;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
+  background-color:#b3b3b3;
+  -moz-border-radius:2px;
+  -webkit-border-radius:5px;
+  border-radius:2px;
+  display:inline-block;
+  cursor:pointer;
+  color:#000000;
+  font-family:myFirstFont2;
+  font-size:14px;
+  /*font-weight:bold;*/
+  padding:8px 10px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #000000;
+
 }
 
 
