--- a/templates/cmdb_validation_admin.html
+++ b/templates/cmdb_validation_admin.html
@@ -17,14 +17,27 @@
 
 <table>
     <tr>
+    <form class="button" method="post" action='/op_res_cats' enctype="multipart/form-data">
+      <input class="mybutton" type="submit" value="OP/RES CAT VALIDATION "  class="span2"></td>    
+      Select this option to validate and convert the Operational and Resolution Categories in NOAM templates.
+    </form>
+      </form>
+ </tr>
+    </table>
+    <h2></h2>
+    
+<table>
+    <tr>
     <form class="button" method="post" action=/noam_data enctype="multipart/form-data">
-      <input class="mybutton" type="submit" value="TEMPLATES CONVERSION"  class="span2"></td>    
+      <input class="mybutton" type="submit" value="CMDB DATA CONVERSION"  class="span2"></td>    
       Select this option to convert CIs and Sites in NOAM templates.
     </form>
       </form>
  </tr>
     </table>
     <h2></h2>
+
+
 
 
 <table>
@@ -58,7 +71,7 @@
     </form>
   </tr>
 </table>
-<!-- <h2></h2>
+ <h2></h2>
 
 
 <table>
@@ -70,5 +83,5 @@
   </tr>
 </table>
  <h2></h2>
--->
+
 {% endblock %}
