--- a/templates/home.html
+++ b/templates/home.html
@@ -37,10 +37,28 @@ Hello, <b>{{ current_user.username}}</b>
 </form>
 </h2>
 <p>&nbsp;</p>
+<script>
+function openWin() {
+  window.open("https://nokia.sharepoint.com/sites/DEToolsMS/SitePages/CMDB-Data-Validation_FrontPage.aspx");
+}
+</script>
+
+
 
  <div class="multi_upload_index">
-  <h2>Instructions for the upload templates -  <b>CI's</b> and/or <b>Sites</b>:</h2>
-      <a href = "/return-file/" target ="blank"><button class="mybutton2">DOWNLOAD TEMPLATES</button></a>
+  <form>
+     <h2>Instructions for the input templates:</h2>
+  <input class='mybutton2' type="button" value="CMDB & OneITSM Templates" onclick="openWin()">
+</form>
+ <hr/>
+    <ul>  
+      <li><p> Click on the button above to be redirected to the templates page in SharePoint;</li>
+      <li><p> Do not remove any field form the template nor delete or change any sheetnames present in the original template;</li>
+      <li><p> Follow the instructions provided in each template and fill the required fields;</li>
+    </ul>
+  </div>
+ 
+      <!--<a href = "/return-file/" target ="blank"><button class="mybutton2">DOWNLOAD TEMPLATES</button></a>
   <hr/>
     <ul>  
       <li><p> During onboarding/deployment the Sites or CI data has to be analyzed and defined in the CMDB data model first;</li>
@@ -48,5 +66,5 @@ Hello, <b>{{ current_user.username}}</b>
       <li><p> The fields marked green are mandatory; in some cases upload in ITSM will fail when these fields are left blank; in other cases it will impact ticket creation afterwards.</li>
       <li><p> The fields, white/unmarked, must be filled based on the rules of the CMDB data model. When blank, the rules may vary per project.</li>
     </ul>
-  </div>
+  </div>-->
 {% endblock %}
