--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -26,12 +26,14 @@
   <tr>
     <form class="button" align="right" method="post" action="data" enctype="multipart/form-data">
       <td><label id="#bb"> SELECT FILES
-        <input type="file" multiple="" name="file[]" class="span3" /></td>
+        <input type="file" multiple="" name="file[]" class="span3" />
+      </td>
       <td> 
         {% if msg3 %}
           <p><strong></strong> {{ msg3 }}
         {% endif %}
-      <input class="mybutton" type="submit" value="SUBMIT"  class="span2"></td>
+      <input class="mybutton" type="submit" value="SUBMIT"  class="span2">
+    </td>
     </form>
   </tr>
 </table>
@@ -41,6 +43,7 @@
   <tr>
     <form class="button" align="right" method="post" action="upload" enctype="multipart/form-data">
       <input class="mybutton" id="btnload" type="submit" value="RUN VALIDATION"  class="span2"></td>
+      
     </form>
   </tr>
 </table>
