--- a/templates/cmdb_validation_users.html
+++ b/templates/cmdb_validation_users.html
@@ -26,6 +26,15 @@
     </table>
     <h2></h2>
 
+<table>
+  <tr> 
+    <form class="button" method="get" action="site_upload" enctype="multipart/form-data">
+        <input class="mybutton" type="SUBMIT" value="    CMDB DATA REPORT     "  class="span2"></td>
+         Select this option to download a CMDB report (workaround).
+    </form>
+  </tr>
+</table>
+ <h2></h2>
 
 
 {% endblock %}
